cluster/gitops/downloads/jackett/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: jackett
specs:
  - description: jackett
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: jackett
        app.kubernetes.io/controller: jackett
        app.kubernetes.io/instance: jackett
    # egress:
    #   # To Byparr to bypass cloudflare captchas
    #   - toEndpoints:
    #       - matchLabels:
    #           app.kubernetes.io/name: byparr
    #           app.kubernetes.io/controller: byparr
    #           app.kubernetes.io/instance: byparr
    #     toPorts:
    #       - ports:
    #           - port: "8191"
    #             protocol: TCP
    ingress:
      # Kubelet for healthcheck
      - fromEntities:
          - host
        toPorts: &webservice_ports
          - ports:
              - port: "9117"
                protocol: TCP
      # From nzbhydra2
      - fromEndpoints:
          - matchLabels:
              app.kubernetes.io/name: nzbhydra2
              app.kubernetes.io/controller: nzbhydra2
              app.kubernetes.io/instance: nzbhydra2
        toPorts: *webservice_ports
      # Gateway to webservice
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: networking
              app.kubernetes.io/name: ingress-gateways
              gateway.networking.k8s.io/gateway-name: internal-gateway
        toPorts: *webservice_ports
